[metadata]
name = tslumen
description = A library for Time Series exploratory data analysis
license = Apache Software License
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hsbc/tslumen
author = HSBC
author_email = opensource@hsbc.com
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Financial and Insurance Industry
    Intended Audience :: Healthcare Industry
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: OS Independent
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Office/Business :: Financial
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Visualization
    Typing :: Typed
keywords =
    timeseries
    time-series
    profiling
    exploratory-data-analysis
    time-series-analysis
    forecasting
    data-science
    machine-learning
    data-mining
    jupyter
project_urls=
    Homepage = https://hsbc.github.io/tslumen
    Repository = https://github.com/hsbc/tslumen
    BugTracker = https://github.com/hsbc/tslumen/issues
    Documentation = https://hsbc.github.io/tslumen/html
    Changelog = https://github.com/hsbc/tslumen/blob/main/CHANGELOG.md


[bdist_wheel]
universal=1

